Fix IE bug related to negative z-index.

--- a/src/components/Metadata/Metadata.scss
+++ b/src/components/Metadata/Metadata.scss
@@ -9,8 +9,9 @@
   margin-top: 90vh;
   min-height: 100vh;
   box-shadow: 0px 0px 8px #444444;
+  position: relative;
 }
 
 .wrapperGridStyle {
-  
+
 }
